# Chess-Swiss-Tournament-Paring-system-XLSX-

./: CMakeLists.txt  game.cpp  game.h  inputs.cpp  inputs.h  main.cpp  mainwindow.cpp  mainwindow.h  paring.cpp  paring.h  player.cpp  player.h  playerlist.cpp  playerlist.h  scoreselector.cpp  scoreselector.h  tournament.cpp  tournament.h  treeviewer.cpp  treeviewer.h
QXlsx/: CMakeLists.txt
